--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.79.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
