--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "formik": "^2.4.6",
-    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.79.2",
+    "react-icons": "^5.3.0",
+    "sass": "^1.79.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
